--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "repository": "git@github.com:jetdevuk/sylph-router.git",
   "author": "Matt Barker <jetdevuk@gmail.com>",
   "license": "Apache-2.0",
+  "description": "A small router used to generate sylph server routes",
   "private": false
 }
