--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
   },
+  "scripts": {
+    "test": "npx ava"
+  },
   "dependencies": {
     "readdirp": "^3.1.3"
   }
