--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "sylph-router",
   "version": "1.1.0",
-  "main": "main.js",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "repository": "git@github.com:jetdevuk/sylph-router.git",
   "author": "Matt Barker <jetdevuk@gmail.com>",
   "license": "Apache-2.0",
   "description": "A small router used to generate sylph server routes",
   "private": false,
   "devDependencies": {
-    "ava": "^2.4.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
   },
   "scripts": {
-    "test": "npx ava"
+    "test": "npx ava",
+    "prepublish": "tsc"
   },
   "dependencies": {
+    "@types/node": "^14.0.13",
     "readdirp": "^3.1.3"
   }
 }
