--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "description": "A small router used to generate sylph server routes",
   "private": false,
   "devDependencies": {
+    "@types/jest": "^26.0.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "test": "npx ava",
